--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^9.0.2",
     "rxjs": "^6.0.0",
     "ts-md5": "^1.2.4",
     "zone.js": "~0.8.26"
